# hpo-embeddings

./: .gitignore  README.md  conversation_direct.py  conversation_generator.py  create_hpo_embeddings.py  extract.py  get_hpo_terms.py  main.py  make_json_from_gpt4.py  pyproject.toml  qa_prompt  run.py  test_extraction.py
data/extract/prompts/: extract_desc_prompts.json  extract_prompts.json
data/generate_in_samples/out_samples/: Kabuki_Syndrome.json  Kabuki_Syndrome_1.json
data/generate_in_samples/prompts/: clin_from_hpo.json  (+2 more)
extract/: from_doc_notes.py  from_jessime_notes.py
extract/prompts/: doc_note_1.txt  doc_note_sysmsg_1.txt  jes_note_1.txt  jes_note_sysmsg.txt
extract/raw_text_inputs/: first_patient_jessime_notes.txt  sample_clinician_notes_gpt4_breakdown.txt  sample_jessime_interview_notes.txt
generation/: clin_notes_follow_up.py
generation/hpo_to_follow_up/: hpo_to_follow_up.py
hpo_extract/: compare_phenos.py  extract.py  funcs_for_llms.py  generate_in_samples.py  hpo_to_follow_up.py  setup_data.py
hpo_extract/compare_phenos/: eval_helpers.py  models.py  pre_process_helpers.py
preprocessing/: hpo_prep.py
prompts/: etrct_prompt_1.txt  extract_prompt_2.txt  extract_prompt_3.txt  extract_prompt_4.txt  full_conversation_prompt  hpo_extracter_template  hpo_extractor_template
sample generated transcripts/: gpt3.5-sample1  gpt3.5-sample2-angelman-syndrome  gpt4-sample1-Biotinidase.json  gpt4-sample1-angelman
samples/sample generated transcripts/: gpt3.5-sample1-angelman.json
samples/sample_clinician_notes/: gpt_gen_1.txt
scripts/: create_hpo_embeddings.py
(+9 files in other folders)
