[tool.poetry]
name = "hpo-embeddings"
version = "0.1.0"
description = ""
authors = ["Alex Abbey <alexabbey4@gmail.com>"]
readme = "README.md"
packages = [{include = "hpo_embeddings"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
