[tool.poetry]
name = "hpo-extraction"
version = "0.1.0"
description = ""
authors = ["Alex Abbey <alexabbey4@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.1"
pinecone-client = "^2.2.1"
langchain = "==0.0.175"
openai = "^0.27.7"
matplotlib = "^3.7.1"
matplotlib-venn = "^0.11.9"
tiktoken = "^0.4.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
